add template data to the home handler and improve view page

--- a/ui/html/pages/view.html
+++ b/ui/html/pages/view.html
@@ -1,4 +1,5 @@
-{{define "title"}}Snippet #{{.ID}}{{end}} {{define "main"}}
+{{define "title"}}Snippet #{{.Snippet.ID}}{{end}} {{define "main"}} {{with
+.Snippet}}
 <div class="snippet">
   <div class="metadata">
     <strong>{{.Title}}</strong>
@@ -10,4 +11,4 @@
     <time>Expires: {{.Expires}}</time>
   </div>
 </div>
-{{end}}
+{{end}} {{end}}
